# Fullstack-App

./: README.MD
backend/: .gitignore  pyproject.toml
backend/app/: models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: employee.js  home.js  index.html
